cargo_err.txt
   Compiling mosquitto-plugin v2.1.3
   Compiling env_logger v0.11.9
error[E0609]: no field `key` on type `&mosquitto_dev::mosquitto_opt`
  --> C:\Users\carlenkaiser\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\mosquitto-plugin-2.1.3\src\lib.rs:36:54
   |
36 |             let c_str = std::ffi::CStr::from_ptr(opt.key);
   |                                                      ^^^ unknown field
   |
   = note: available field is: `_address`

error[E0609]: no field `value` on type `&mosquitto_dev::mosquitto_opt`
  --> C:\Users\carlenkaiser\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\mosquitto-plugin-2.1.3\src\lib.rs:40:54
   |
40 |             let c_str = std::ffi::CStr::from_ptr(opt.value);
   |                                                      ^^^^^ unknown field
   |
   = note: available field is: `_address`

error[E0308]: mismatched types
   --> C:\Users\carlenkaiser\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\mosquitto-plugin-2.1.3\src\lib.rs:380:28
    |
380 |             if protocol == mosquitto_protocol_mp_mqtt {
    |                --------    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `i32`
    |                |
    |                expected because this is `u32`
    |
help: you can convert an `i32` to a `u32` and panic if the converted value doesn't fit
    |
380 |             if protocol == mosquitto_protocol_mp_mqtt.try_into().unwrap() {
    |                                                      ++++++++++++++++++++

error[E0308]: mismatched types
   --> C:\Users\carlenkaiser\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\mosquitto-plugin-2.1.3\src\lib.rs:382:35
    |
382 |             } else if protocol == mosquitto_protocol_mp_mqttsn {
    |                       --------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `i32`
    |                       |
    |                       expected because this is `u32`
    |
help: you can convert an `i32` to a `u32` and panic if the converted value doesn't fit
    |
382 |             } else if protocol == mosquitto_protocol_mp_mqttsn.try_into().unwrap() {
    |                                                               ++++++++++++++++++++

error[E0308]: mismatched types
   --> C:\Users\carlenkaiser\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\mosquitto-plugin-2.1.3\src\lib.rs:384:35
    |
384 |             } else if protocol == mosquitto_protocol_mp_websockets {
    |                       --------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `i32`
    |                       |
    |                       expected because this is `u32`
    |
help: you can convert an `i32` to a `u32` and panic if the converted value doesn't fit
    |
384 |             } else if protocol == mosquitto_protocol_mp_websockets.try_into().unwrap() {
    |                                                                   ++++++++++++++++++++

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `mosquitto-plugin` (lib) due to 5 previous errors
